# coursework_2

./: README.md  main.py  pyproject.toml
src/: API_requests.py  file_saver.py  utils.py  vacancy.py
